--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^7.0.11",
     "qrcode": "^1.5.4",
     "rate-limiter-flexible": "^9.0.0",
+    "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "zod": "^4.1.13"
   },
